color contrast in mobile menu items at odd and even was fixed

--- a/less/module2/variables.less
+++ b/less/module2/variables.less
@@ -165,7 +165,7 @@
 @navbar-border-color:#dedede;
 @navbar-box-shadow-color:rgba(0, 0, 0, 0.055);
 @navbar-bg:#ccc;
-@navbar-mobile-bg:rgb( 190, 124, 89 );
+@navbar-mobile-bg:rgb( 220, 201, 195 );
 @navbar-mobile-item-odd-bg:rgb( 240, 221, 201);
 @navbar-mobile-header-bg:rgb( 86, 45, 38 );
 @navbar-mobile-color:rgb( 236, 237, 239 );
